all exceptions handler module